# src/components/vacation/vacation.controller.ts
@@ -64,7 +64,7 @@ function formatToLocalMySQL(date: Date): string {
 }
 
 export const getUserVacationRequests = async (req: Request, res: Response) => {
-    const { employeeId, page, limit, column, order } = req.params;
+    const { employeeId, page, limit, sortField, sortDirection } = req.params;
 
     if (!employeeId) {
         return res.status(400).json({ message: "employeeId is required" });
@@ -74,14 +74,14 @@ export const getUserVacationRequests = async (req: Request, res: Response) => {
     }
 
     // Check if column or order is provided without the other
-    if ((!(column==':column') && (order==':order')) || (column==':column' && !(order==':order'))) {
+    if ((!(sortField==':sortField') && (sortDirection==':sortDirection')) || (sortField==':sortField' && !(sortDirection==':sortDirection'))) {
         return res.status(400).json({ message: "Both column and order are required together" });
     }
 
     try {
-        const orderType = (order?.toUpperCase() === 'ASC' || order?.toUpperCase() === 'DESC') ? order.toUpperCase() as 'ASC' | 'DESC' : null;
+        const orderType = (sortDirection?.toUpperCase() === 'ASC' || sortDirection?.toUpperCase() === 'DESC') ? sortDirection.toUpperCase() as 'ASC' | 'DESC' : null;
 
-        const result = await fetchUserRequestsServiceByPages(parseInt(employeeId), parseInt(page || '0'), parseInt(limit || '0'), column || '', orderType);
+        const result = await fetchUserRequestsServiceByPages(parseInt(employeeId), parseInt(page || '0'), parseInt(limit || '0'), sortField || '', orderType);
         
         return res.status(result.status).json(result.response);
     } catch (error) {
@@ -197,7 +197,7 @@ export const getVacationRequestsByTeam = async (req: Request, res: Response) => 
 };
 
 export const getAllVacationRequests = async (req: Request, res: Response) => {
-    let { page, limit, column, order } = req.params;
+    let { page, limit, sortField, sortDirection } = req.params;
 
     // Check if page or limit is provided without the other
     if ((!(page==':page') && limit==':limit') || (page==':page' && !(limit==':limit'))) {
@@ -205,11 +205,9 @@ export const getAllVacationRequests = async (req: Request, res: Response) => {
     }
 
     // Check if column or order is provided without the other
-    if ((!(column==':column') && (order==':order')) || (column==':column' && !(order==':order'))) {
+    if ((!(sortField==':sortField') && (sortDirection==':sortDirection')) || (sortField==':sortField' && !(sortDirection==':sortDirection'))) {
         return res.status(400).json({ message: "Both column and order are required together" });
     }
-
-    console.log("Column and order are: ", column, order);
 
     try {
         // If page or limit are null, set them to default values (e.g., page 1, limit 10)
@@ -217,12 +215,12 @@ export const getAllVacationRequests = async (req: Request, res: Response) => {
         const currentLimit = limit ? parseInt(limit) : 10;
 
         // Check if order is valid (ASC or DESC)
-        const orderType = (order?.toUpperCase() === 'ASC' || order?.toUpperCase() === 'DESC')
-            ? order.toUpperCase() as 'ASC' | 'DESC'
+        const orderType = (sortDirection?.toUpperCase() === 'ASC' || sortDirection?.toUpperCase() === 'DESC')
+            ? sortDirection.toUpperCase() as 'ASC' | 'DESC'
             : null;
 
         // Fetch all vacation requests with pagination and sorting
-        const result = await fetchAllVacationRequestsServiceByPages(currentPage, currentLimit, column || '', orderType);
+        const result = await fetchAllVacationRequestsServiceByPages(currentPage, currentLimit, sortField || '', orderType);
 
         return res.status(result.status).json(result.response);
     } catch (error) {
