# src/components/vacation/vacation.routes.ts
@@ -7,9 +7,9 @@ const router = express.Router();
 
 router.get('/vacation/filter', vacationController.filterVacationRequests);
 
-router.get('/vacation/:employeeId/:page/:limit/:column/:order', vacationController.getUserVacationRequests);
+router.get('/vacation/:employeeId/:page/:limit/:sortField/:sortDirection', vacationController.getUserVacationRequests);
 
-router.get('/vacation/superAdmin/allVacations/:page/:limit/:column/:order', checkSuperAdminRole, vacationController.getAllVacationRequests);
+router.get('/vacation/superAdmin/allVacations/:page/:limit/:sortField/:sortDirection', checkSuperAdminRole, vacationController.getAllVacationRequests);
 
 router.post('/vacation', vacationController.createVacationRequest);
 
