# src/swagger.json
@@ -6,7 +6,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080/"
+      "url": "http://localhost:3000/"
     }
   ],
   "paths": {
@@ -25,7 +25,6 @@
                 "required": [
                   "name",
                   "team",
-                  "phonenumber",
                   "email"
                 ],
                 "properties": {
@@ -38,11 +37,6 @@
                     "type": "string",
                     "description": "The team type the employee belongs to",
                     "example": "Backend"
-                  },
-                  "phonenumber": {
-                    "type": "string",
-                    "description": "Employee's phone number",
-                    "example": 1023255440
                   },
                   "email": {
                     "type": "string",
@@ -231,7 +225,7 @@
             }
           },
           "401": {
-            "description": "Incorrect email or password",
+            "description": "Invalid Credentials",
             "content": {
               "application/json": {
                 "schema": {
@@ -239,7 +233,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Incorrect email or password"
+                      "example": "Invalid Credentials"
                     }
                   }
                 }
@@ -793,30 +787,39 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "integer",
-                        "example": 1
-                      },
-                      "employeeId": {
-                        "type": "integer",
-                        "example": 1
-                      },
-                      "status": {
-                        "type": "string",
-                        "example": "approved"
-                      },
-                      "date": {
-                        "type": "string",
-                        "example": "1627849200000,1627935600000"
-                      },
-                      "reason": {
-                        "type": "string",
-                        "example": "Vacation"
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "employeeId": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "status": {
+                            "type": "string",
+                            "example": "approved"
+                          },
+                          "date": {
+                            "type": "string",
+                            "example": "1627849200000,1627935600000"
+                          },
+                          "reason": {
+                            "type": "string",
+                            "example": "Vacation"
+                          }
+                        }
                       }
+                    },
+                    "count": {
+                      "type": "integer",
+                      "example": 10
                     }
                   }
                 }
@@ -862,7 +865,7 @@
         }
       }
     },
-    "/vacation/{employeeId}/{page}/{limit}/{column}/{order}": {
+    "/vacation/{employeeId}/{page}/{limit}/{sortField}/{sortDirection}": {
       "get": {
         "summary": "Retrieve vacation requests for a specific employee with pagination, sorting, and ordering",
         "tags": [
@@ -901,7 +904,7 @@
           },
           {
             "in": "path",
-            "name": "column",
+            "name": "sortField",
             "schema": {
               "type": "string"
             },
@@ -911,7 +914,7 @@
           },
           {
             "in": "path",
-            "name": "order",
+            "name": "sortDirection",
             "schema": {
               "type": "string",
               "enum": [
@@ -930,30 +933,40 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "integer",
-                        "example": 1
-                      },
-                      "employeeId": {
-                        "type": "integer",
-                        "example": 1
-                      },
-                      "status": {
-                        "type": "string",
-                        "example": "accepted"
-                      },
-                      "date": {
-                        "type": "string",
-                        "example": "1627849200000,1627935600000"
-                      },
-                      "reason": {
-                        "type": "string",
-                        "example": "Vacation"
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "employeeId": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "status": {
+                            "type": "string",
+                            "example": "accepted"
+                          },
+                          "date": {
+                            "type": "string",
+                            "description": "Timestamp range for vacation",
+                            "example": "1627849200000,1627935600000"
+                          },
+                          "reason": {
+                            "type": "string",
+                            "example": "Vacation"
+                          }
+                        }
                       }
+                    },
+                    "count": {
+                      "type": "integer",
+                      "example": 3
                     }
                   }
                 }
@@ -1015,50 +1028,111 @@
         }
       }
     },
-    "/vacation/superAdmin/allVacations": {
+    "/vacation/superAdmin/allVacations/{page}/{limit}/{sortField}/{sortDirection}": {
       "get": {
-        "summary": "Retrieve all vacation requests for a super admin",
+        "summary": "Retrieve all vacation requests with pagination and sorting",
+        "description": "This endpoint allows a super admin to retrieve all vacation requests, optionally paginated and sorted by a specified field and direction.",
         "tags": [
           "Vacation"
         ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "page",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 1
+            },
+            "description": "Page number to retrieve"
+          },
+          {
+            "in": "path",
+            "name": "limit",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 10
+            },
+            "description": "Number of records to retrieve per page"
+          },
+          {
+            "in": "path",
+            "name": "sortField",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "createdAt"
+            },
+            "description": "Field to sort the results by. Default is 'createdAt'"
+          },
+          {
+            "in": "path",
+            "name": "sortDirection",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "ASC",
+                "DESC"
+              ],
+              "example": "DESC"
+            },
+            "description": "Direction of sorting, either ascending ('ASC') or descending ('DESC'). Default is 'DESC'."
+          }
+        ],
         "responses": {
           "200": {
-            "description": "List of all vacation requests",
+            "description": "List of vacation requests",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "integer",
-                        "example": 1
-                      },
-                      "employeeId": {
-                        "type": "integer",
-                        "example": 1
-                      },
-                      "status": {
-                        "type": "string",
-                        "example": "accepted"
-                      },
-                      "date": {
-                        "type": "string",
-                        "example": "1627849200000,1627935600000"
-                      },
-                      "reason": {
-                        "type": "string",
-                        "example": "Vacation"
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "employee": {
+                            "type": "object",
+                            "properties": {
+                              "name": {
+                                "type": "string",
+                                "example": "John Doe"
+                              },
+                              "role": {
+                                "type": "string",
+                                "example": "Admin"
+                              }
+                            }
+                          },
+                          "date": {
+                            "type": "string",
+                            "example": "1692355200000,1692921600000"
+                          },
+                          "status": {
+                            "type": "string",
+                            "example": "Pending"
+                          }
+                        }
                       }
+                    },
+                    "count": {
+                      "type": "integer",
+                      "example": 2
                     }
                   }
                 }
               }
             }
           },
-          "404": {
-            "description": "No vacation requests found",
+          "400": {
+            "description": "Bad request due to missing or invalid pagination/sorting parameters",
             "content": {
               "application/json": {
                 "schema": {
@@ -1066,7 +1140,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "No vacation requests found"
+                      "example": "Both page and limit are required together"
                     }
                   }
                 }
@@ -1086,7 +1160,7 @@
                     },
                     "error": {
                       "type": "string",
-                      "example": "Error message"
+                      "example": "Error fetching requests"
                     }
                   }
                 }
@@ -1675,6 +1749,59 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/user": {
+      "get": {
+        "summary": "Get all users",
+        "description": "Retrieves a list of all employees. Only accessible by Super Admin.",
+        "tags": [
+          "Employees"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of all employees.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "number",
+                        "description": "The employee ID."
+                      },
+                      "name": {
+                        "type": "string",
+                        "description": "The employee's name."
+                      },
+                      "email": {
+                        "type": "string",
+                        "description": "The employee's email."
+                      },
+                      "role": {
+                        "type": "string",
+                        "description": "The employee's role (e.g., Admin, User)."
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized, the user is not authenticated or lacks permission."
+          },
+          "500": {
+            "description": "Internal server error."
           }
         }
       }
